<resources>
    <string name="app_name">PARDUOTA</string>
    <string name="facebook_app_id">1316048798514167</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="network_unavailable">Can\'t connect internet!</string>
    <string name="Please_turn_on_network_connection">Please turn on network connection!</string>
    <string name="turn_on">Turn On</string>
    <string name="tv_name">Name</string>
    <string name="tv_des">Description</string>
    <string name="tv_address">Address</string>
    <string name="web">http://pardouta.com</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_in_facebook">Login via Facebook</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_number">Enter...(EURO)</string>
    <string name="empty">Empty</string>
    <string name="buy_credit">Buy Credit</string>
    <string name="notify_email_not_active">Pls verify your email!</string>
    <string name="log_out">Log out</string>
    <string name="title_item">Item</string>
    <string name="notify_wrong_password">Wrong  password.Pls check again!</string>
    <string name="tv_total">Total items</string>
    <string name="tv_email">Email</string>
    <string name="tv_credit">Credit</string>
    <string name="add_item">Add item</string>
    <string name="notify_out_of_session">Out of session.Please log in again!</string>
    <string name="action_sign_up"><u>Sign Up</u></string>
    <string name="notify_internet_connection">No internet connection!</string>
    <string name="notify_sign_up_ok">Sign up successful!
        \n Pls check email to active your account</string>
    <string name="action_check_email">Check Email</string>
    <string name="action_cancel">Cancel</string>
    <string name="notify_input">Fill item\'s information</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_address">Address</string>
    <string name="hint_price">Price : </string>
    <string name="hint_quantity">Quantity : </string>
    <string name="hint_category">Category</string>
    <string name="action_add_item">ADD</string>
    <string name="action_upload_image">Upload Image</string>
    <string name="select_photo">Select Picture</string>
    <string name="btn_next">Next</string>
    <string name="btn_upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="draft">Draft</string>
    <string name="pending">Pending</string>
    <string name="sold">Sold</string>
    <string name="reject">Reject</string>
    <string name="btn_close">Close</string>
    <string name="loading">Loading</string>
    <string name="title_add_title">Type item\'s title</string>
    <string name="title_too_short">Title is too short!</string>
    <string name="other">Price - Quantiy - Condition - Address - Category</string>
    <string name="hint_condition">Condition</string>
    <string name="btn_submit">Submit</string>
    <string name="new_">New</string>
    <string name="new_other">New other (see details)</string>
    <string name="new_with">New with defects</string>
    <string name="manufacturer">Manufacturer refurbished</string>
    <string name="seller">Seller refurbished</string>
    <string name="used">Used</string>
    <string name="very_good">Very Good</string>
    <string name="good">Good</string>
    <string name="acceptable">Acceptable</string>
    <string name="working">For parts or not working</string>
    <string name="check_box_terms">In Clicking \"Log in\" you are agreeing to the Terms and Condition.</string>
    <string name="re_password">Re-Enter Password</string>
    <string name="notify_check_box">You need to agree with our Terms and Condition!</string>
    <string name="title_activity_home">Parduota</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_other">Other</string>
    <string name="order">Order</string>
    <string name="menu_items">Items</string>
    <string name="menu_all">All</string>
    <string name="menu_add_new">Add new</string>
    <string name="menu_active">Active</string>
    <string name="menu_sold">Sold</string>
    <string name="menu_pending">Pending</string>
    <string name="menu_draft">Draft</string>
    <string name="menu_reject">Reject</string>
    <string name="what_is_vip_detail">If you want more functions, information..., please click \"Request VIP\" and contact me at \"sprintershop@yahoo.com\"</string>
    <string name="title_activity_setting_ac">Setting</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_order_ac">Orders</string>
    <string name="title_activity_order_detail_ac">OrderDetailAC</string>
    <string name="action_send">Send</string>
    <string name="title_activity_item_detail_ac">ItemDetailAC</string>
    <string name="shipping_options">Shipping options</string>
    <string name="title_activity_edit_item_ac">EditItemAC</string>
    <string name="action_notification">Notification</string>
    <string name="title_activity_request_vipac">RequestVIPAC</string>
    <string name="title_activity_photo_view_ac">PhotoViewAC</string>
    <string name="title_activity_notification_ac">Notifications</string>
    <string name="enter_information">Fill Item\'s Information</string>
    <string name="enter_title">Fill Item\'s Title</string>
    <string name="enter_detail">Fill Item\'s Detail.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="password_confirm">Confirm Password </string>
    <string name="btn_save">Save</string>
    <string name="profile">Profile</string>
    <string name="action_next">next</string>
    <string name="condition_new">New</string>
    <string name="condition_new_other">New other</string>
    <string name="choose_country">Choose country</string>
    <string name="notify_save_draft">Do you want to save the post as a Draft?</string>
    <string name="btn_no">No</string>
    <string name="choose_item_condition">Choose item\'s condition</string>
    <string name="notify_choose_condition">Pls choose item\'s condition!</string>
    <string name="notify_choose_country">Pls choose country!</string>
    <string name="sell_for_charity">Sell for charity</string>
    <string name="pick_up_only">Pick up only</string>
    <string name="freight">Freight</string>
    <string name="kg_dimension">KG and dimension</string>
    <string name="width">Width (cm)</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="length">Length (cm)</string>
    <string name="notify_add_image">Click \"ADD\" button to choose photos</string>
    <string name="action_log_out">Log out</string>
    <string name="action_detail">Detail</string>
    <string name="action_charger">Charge</string>
    <string-array name="condition">
        <item>@string/choose_item_condition</item>
        <item>New</item>
        <item>New other</item>
        <item>New with defects</item>
        <item>Manufacturer refurbished</item>
        <item>Seller refurbished</item>
        <item>Used</item>
        <item>Very Good</item>
        <item>Good</item>
        <item>Acceptable</item>
        <item>For parts or not working</item>
    </string-array>
    <string-array name="condition_code">
        <item>-1</item>
        <item>1000</item>
        <item>1500</item>
        <item>1750</item>
        <item>2000</item>
        <item>2500</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
    </string-array>
    <string-array name="item_type">
        <item>All</item>
        <item>Active</item>
        <item>Sold</item>
        <item>Pending</item>
        <item>Draft</item>
        <item>Reject</item>
    </string-array>
    <string name="username">UserName</string>
    <string name="tv_title">Title</string>
    <string name="tv_ebay_id">Ebay Id</string>
    <string name="action_chat_room">Inbox</string>
</resources>