<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />


    <item
        android:visible="false"
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:icon="@drawable/ic_items"
        android:id="@+id/nav_all"
        android:title="@string/menu_items" />

    <item android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/nav_order"
                android:title="@string/order" />

            <item
                android:id="@+id/nav_charge"
                android:title="@string/action_charger" />


            <item
                android:id="@+id/nav_setting"
                android:title="@string/action_settings" />


            <item
                android:visible="false"
                android:id="@+id/nav_chat"
                android:title="@string/action_chat_room" />

            <item
                android:id="@+id/nav_log_out"
                android:title="@string/action_log_out" />
        </menu>
    </item>

</menu>
