<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_title"
        android:imeOptions="actionNext"
        android:inputType="text" />


    <EditText

        android:id="@+id/et_ebay_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_ebay_id"
        android:imeOptions="actionNext"
        android:inputType="number" />


    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/tv_des"
        android:imeOptions="actionDone"
        android:inputType="text" />

</LinearLayout>