<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_request_vip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/btn_requestVIP"
        android:visibility="gone" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TableRow android:padding="10dp">

            <TextView
                android:paddingRight="10dp"
                android:text="@string/tv_name" />

            <TextView android:id="@+id/tv_name" />

        </TableRow>

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"></View>

        <TableRow android:padding="10dp">

            <TextView
                android:paddingRight="10dp"
                android:text="@string/tv_total" />

            <TextView android:id="@+id/tv_total" />

        </TableRow>

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"></View>

        <TableRow android:padding="10dp">

            <TextView
                android:paddingRight="10dp"
                android:text="@string/tv_email" />

            <TextView android:id="@+id/tv_email" />

        </TableRow>

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"></View>

        <TableRow android:padding="10dp">

            <TextView
                android:paddingRight="10dp"
                android:text="@string/tv_credit" />

            <TextView android:id="@+id/tv_credit" />

        </TableRow>


    </TableLayout>


</LinearLayout>